--- a/views/campgrounds.ejs
+++ b/views/campgrounds.ejs
@@ -1,14 +1,30 @@
 <% include partials/header %>
 
-<h1>This is the campgrounds page</h1>
+<header class="jumbotron">
+    <div class="container">
+      <h1>Welcome to YelpCamp!</h1>  
+      <p class="lead">View our hand-picked campgrounds from all over the world</p>
+      <p>
+        <a class="btn btn-primary btn-lg" href="/campgrounds/new">Add new campground</a>      
+      </p>
+    </div>
+</header>
 
-<a href="/campgrounds/new">Add new campground</a>
-
-<% campgrounds.forEach(campground => { %>
-  <div>
-    <h4><%= campground.name %></h4>
-    <img src="<%= campground.image %>" width="500">
+<div class="container">  
+  <div class="row text-center">
+    <% campgrounds.forEach(campground => { %>
+      <div class="col-md-3 col-sm-6">
+        <div class="card">
+          <img src="<%= campground.image %>" class="card-img-top img-fluid">
+          <div class="card-body"> 
+            <div class="card-title">
+              <h4><%= campground.name %></h4>
+            </div>
+          </div> 
+        </div>
+      </div>
+    <% }); %>
   </div>
-<% }); %>
+</div>
 
 <% include partials/footer %>
