--- a/views/new.ejs
+++ b/views/new.ejs
@@ -1,12 +1,28 @@
 <% include partials/header %>
 
-<h1>Create a new campground</h1>
+<div class="container">
+  <div class="row mt-5 mb-4">
+      <div class="col">
+        <h1 class="text-center">Create a New Campground</h1>
+      </div>    
+  </div>
+  <div class="row">
+    <div class="col-md-4 mx-auto">
+      <form action="/campgrounds" method="POST">
+        <div class="form-group">
+          <input class="form-control" type="text" name="name" placeholder="name">
+        </div>
+        <div class="form-group">
+          <input class="form-control" type="text" name="image" placeholder="image url">
+        </div>
+        <div class="form-group">
+          <button class="btn btn-lg btn-primary btn-block">Submit</button>          
+        </div>
+      </form>      
+      <a class="btn btn-link" href="/campgrounds">Go back</a>      
+    </div>
+  </div>
+</div>
 
-<form action="/campgrounds" method="POST">
-  <input type="text" name="name" placeholder="name">
-  <input type="text" name="image" placeholder="image url">
-  <button>Submit</button>
-</form>
 
-<a href="/campgrounds">Go back</a>
 <% include partials/footer %>
