--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,6 +20,7 @@
             <div class="card-title">
               <h4><%= campground.name %></h4>
             </div>
+            <a href="/campgrounds/<%= campground._id %>" class="btn btn-primary d-inline-block">More Info</a>
           </div> 
         </div>
       </div>
